--- a/index.html
+++ b/index.html
@@ -1,24 +1,23 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Developer Portfolio | Full Stack & 3D Web Developer</title>
-    <meta name="description" content="Professional portfolio of a Full Stack Developer specializing in MERN stack and 3D web experiences with Three.js." />
-    <meta name="author" content="Developer Portfolio" />
+    <title>Akhil Sharma | Full Stack & 3D Web Developer</title>
+    <meta name="description" content="Professional portfolio of a Full Stack Developer specializing in MERN stack and 3D web experiences using Three.js." />
+    <meta name="author" content="Akhil Sharma" />
 
     <meta property="og:title" content="Developer Portfolio | Full Stack & 3D Web Developer" />
-    <meta property="og:description" content="Professional portfolio of a Full Stack Developer specializing in MERN stack and 3D web experiences with Three.js." />
+    <meta property="og:description" content="Explore the work of a professional Full Stack Developer skilled in React, Node.js, MongoDB, and Three.js for immersive web experiences." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://yourdomain.com/assets/opengraph-image.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@your_twitter_handle" />
+    <meta name="twitter:image" content="https://yourdomain.com/assets/opengraph-image.png" />
     
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
